@@ -4774,8 +4774,10 @@ function_arg_advance (CUMULATIVE_ARGS *cum, enum machine_mode mode,
 	      || mode == DDmode || mode == TDmode
 	      || (mode == TFmode && !TARGET_IEEEQUAD)))
 	{
-	  /* Must use an even/odd register pair.  */
-	  if (mode == TDmode && cum->fregno % 2)
+	  /* TDmode must be passed in an even/odd float register pair.
+	     This assumes that the register number is odd when fregno
+	     is odd.  */
+	  if (mode == TDmode && (cum->fregno % 2 == 1))
 	    cum->fregno++;
 
 	  if (cum->fregno + (mode == TFmode || mode == TDmode ? 1 : 0)
@@ -4838,7 +4840,15 @@ function_arg_advance (CUMULATIVE_ARGS *cum, enum machine_mode mode,
       if (SCALAR_FLOAT_MODE_P (mode)
 	  && mode != SDmode
 	  && TARGET_HARD_FLOAT && TARGET_FPRS)
-	cum->fregno += (GET_MODE_SIZE (mode) + 7) >> 3;
+	{
+	  /* TDmode must be passed in an even/odd float register pair.
+	     This assumes that the register number is odd when fregno
+	     is odd.  */
+	  if (mode == TDmode && (cum->fregno % 2 == 1))
+	    cum->fregno++;
+	  cum->fregno += (GET_MODE_SIZE (mode) + 7) >> 3;
+	}
+
 
       if (TARGET_DEBUG_ARG)
 	{
@@ -5315,8 +5325,10 @@ function_arg (CUMULATIVE_ARGS *cum, enum machine_mode mode,
 	      || mode == DDmode || mode == TDmode
 	      || (mode == TFmode && !TARGET_IEEEQUAD)))
 	{
-	  /* Must use an even/odd register pair.  */
-	  if (mode == TDmode && cum->fregno % 2)
+	  /* TDmode must be passed in an even/odd float register pair.
+	     This assumes that the register number is odd when fregno
+	     is odd.  */
+	  if (mode == TDmode && (cum->fregno % 2 == 1))
 	    cum->fregno++;
 
 	  if (cum->fregno + (mode == TFmode || mode == TDmode ? 1 : 0)
@@ -5349,6 +5361,12 @@ function_arg (CUMULATIVE_ARGS *cum, enum machine_mode mode,
   else
     {
       int align_words = rs6000_parm_start (mode, type, cum->words);
+
+      /* TDmode must be passed in an even/odd float register pair.
+	 This assumes that the register number is odd when fregno
+	 is odd.  */
+      if (mode == TDmode && (cum->fregno % 2 == 1))
+	cum->fregno++;
 
       if (USE_FP_FOR_ARG_P (cum, mode, type))
 	{
