@@ -1,3 +1,8 @@
+2007-04-03  Janis Johnson  <janis187@us.ibm.com>
+
+	gcc.target/powerpc/ppc32-abi-dfp-1.c: New test.
+	gcc.target/powerpc/ppc64-abi-dfp-1.c: New test.
+
 2007-03-26  Janis Johnson  <janis187@us.ibm.com>
 
 	* gcc.dg/dfp/operator-cond.c: Call init, fix a comparison.
